gen/cz/zcu/kiv/fjp/Pascal0LikeParser.java
// Generated from C:/Users/Kossyr/IdeaProjects/PascaL0like/src/cz/zcu/kiv/fjp\Pascal0Like.g4 by ANTLR 4.7
package cz.zcu.kiv.fjp;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Pascal0LikeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
            INT = 1, FLOAT = 2, BEGIN = 3, AND = 4, BOOLEAN = 5, CASE = 6, CONST = 7, DO = 8, OF = 9,
            DOWNTO = 10, ELSE = 11, END = 12, FOR = 13, GOTO = 14, IF = 15, INTEGER = 16, LABEL = 17,
            OR = 18, PROCEDURE = 19, REAL = 20, REPEAT = 21, THEN = 22, TO = 23, UNTIL = 24, WHILE = 25,
            CALL = 26, READ = 27, WRITE = 28, NOT = 29, TRUE = 30, FALSE = 31, VAR = 32, LEGACY = 33,
            PROGRAM = 34, USE = 35, DEFAULT = 36, STRICT = 37, ODD = 38, MULTIPLY = 39, DIVIDE = 40,
            MODULO = 41, DOT = 42, ASSIGN = 43, COMMA = 44, SEMI = 45, COLON = 46, EQUAL = 47, NOT_EQUAL = 48,
            LT = 49, LE = 50, GE = 51, GT = 52, LPAREN = 53, RPAREN = 54, PLUS = 55, MINUS = 56, LBRACK = 57,
            RBRACK = 58, TERNARY_ONE = 59, TERNARY_TWO = 60, IDENT = 61, WS = 62;
    public static final int
            RULE_program = 0, RULE_declare_mode = 1, RULE_block = 2, RULE_declaration_part = 3,
		RULE_procedure_declaration_part = 4, RULE_constant_declaration_part = 5, 
		RULE_label_declaration_part = 6, RULE_variable_declaration_part = 7, RULE_label_list = 8, 
		RULE_identifier_list = 9, RULE_expression_list = 10, RULE_statement_part = 11, 
		RULE_statement = 12, RULE_io_statement = 13, RULE_ternary_statement = 14, 
		RULE_assignment_statement = 15, RULE_goto_statement = 16, RULE_procedure_statement = 17, 
		RULE_compound_statement = 18, RULE_statement_list = 19, RULE_while_do_statement = 20, 
		RULE_do_while_statement = 21, RULE_repeat_statement = 22, RULE_for_statement = 23, 
		RULE_if_statement = 24, RULE_case_statement = 25, RULE_case_limb_list = 26, 
		RULE_case_limb = 27, RULE_case_label_list = 28, RULE_type = 29, RULE_expression = 30, 
		RULE_atom = 31;
	public static final String[] ruleNames = {
		"program", "declare_mode", "block", "declaration_part", "procedure_declaration_part", 
		"constant_declaration_part", "label_declaration_part", "variable_declaration_part", 
		"label_list", "identifier_list", "expression_list", "statement_part", 
		"statement", "io_statement", "ternary_statement", "assignment_statement", 
		"goto_statement", "procedure_statement", "compound_statement", "statement_list", 
		"while_do_statement", "do_while_statement", "repeat_statement", "for_statement", 
		"if_statement", "case_statement", "case_limb_list", "case_limb", "case_label_list", 
		"type", "expression", "atom"
	};
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pascal0Like.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Pascal0LikeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(Pascal0LikeParser.PROGRAM, 0); }
		public TerminalNode LPAREN() { return getToken(Pascal0LikeParser.LPAREN, 0); }
		public TerminalNode IDENT() { return getToken(Pascal0LikeParser.IDENT, 0); }
		public TerminalNode RPAREN() { return getToken(Pascal0LikeParser.RPAREN, 0); }
		public TerminalNode SEMI() { return getToken(Pascal0LikeParser.SEMI, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(Pascal0LikeParser.DOT, 0); }
		public Declare_modeContext declare_mode() {
			return getRuleContext(Declare_modeContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(PROGRAM);
			setState(65);
			match(LPAREN);
			setState(66);
			match(IDENT);
			setState(67);
			match(RPAREN);
			setState(68);
			match(SEMI);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==USE) {
				{
				setState(69);
				declare_mode();
				}
			}

			setState(72);
			block();
			setState(73);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_modeContext extends ParserRuleContext {
		public Declare_modeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_mode; }
	 
		public Declare_modeContext() { }
		public void copyFrom(Declare_modeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LegacyModeContext extends Declare_modeContext {
		public TerminalNode USE() { return getToken(Pascal0LikeParser.USE, 0); }
		public TerminalNode LEGACY() { return getToken(Pascal0LikeParser.LEGACY, 0); }
		public TerminalNode SEMI() { return getToken(Pascal0LikeParser.SEMI, 0); }
		public LegacyModeContext(Declare_modeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterLegacyMode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitLegacyMode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitLegacyMode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DefaultModeContext extends Declare_modeContext {
		public TerminalNode USE() { return getToken(Pascal0LikeParser.USE, 0); }
		public TerminalNode DEFAULT() { return getToken(Pascal0LikeParser.DEFAULT, 0); }
		public TerminalNode SEMI() { return getToken(Pascal0LikeParser.SEMI, 0); }
		public DefaultModeContext(Declare_modeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterDefaultMode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitDefaultMode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitDefaultMode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StrictModeContext extends Declare_modeContext {
		public TerminalNode USE() { return getToken(Pascal0LikeParser.USE, 0); }
		public TerminalNode STRICT() { return getToken(Pascal0LikeParser.STRICT, 0); }
		public TerminalNode SEMI() { return getToken(Pascal0LikeParser.SEMI, 0); }
		public StrictModeContext(Declare_modeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterStrictMode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitStrictMode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitStrictMode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declare_modeContext declare_mode() throws RecognitionException {
		Declare_modeContext _localctx = new Declare_modeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declare_mode);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new LegacyModeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				match(USE);
				setState(76);
				match(LEGACY);
				setState(77);
				match(SEMI);
				}
				break;
			case 2:
				_localctx = new DefaultModeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				match(USE);
				setState(79);
				match(DEFAULT);
				setState(80);
				match(SEMI);
				}
				break;
			case 3:
				_localctx = new StrictModeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				match(USE);
				setState(82);
				match(STRICT);
				setState(83);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public Declaration_partContext declaration_part() {
			return getRuleContext(Declaration_partContext.class,0);
		}
		public Statement_partContext statement_part() {
			return getRuleContext(Statement_partContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			declaration_part();
			setState(87);
			statement_part();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_partContext extends ParserRuleContext {
		public List<Label_declaration_partContext> label_declaration_part() {
			return getRuleContexts(Label_declaration_partContext.class);
		}
		public Label_declaration_partContext label_declaration_part(int i) {
			return getRuleContext(Label_declaration_partContext.class,i);
		}
		public List<Constant_declaration_partContext> constant_declaration_part() {
			return getRuleContexts(Constant_declaration_partContext.class);
		}
		public Constant_declaration_partContext constant_declaration_part(int i) {
			return getRuleContext(Constant_declaration_partContext.class,i);
		}
		public List<Variable_declaration_partContext> variable_declaration_part() {
			return getRuleContexts(Variable_declaration_partContext.class);
		}
		public Variable_declaration_partContext variable_declaration_part(int i) {
			return getRuleContext(Variable_declaration_partContext.class,i);
		}
		public List<Procedure_declaration_partContext> procedure_declaration_part() {
			return getRuleContexts(Procedure_declaration_partContext.class);
		}
		public Procedure_declaration_partContext procedure_declaration_part(int i) {
			return getRuleContext(Procedure_declaration_partContext.class,i);
		}
		public Declaration_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterDeclaration_part(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitDeclaration_part(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitDeclaration_part(this);
			else return visitor.visitChildren(this);
		}
	}

    private static final String[] _LITERAL_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, "'*'", "'/'", "'%'", "'.'", "':='", "','", "';'", "':'",
            "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'+'", "'-'",
            "'['", "']'", "'?'", "'!'"
    };

	public static class Procedure_declaration_partContext extends ParserRuleContext {
		public TerminalNode PROCEDURE() { return getToken(Pascal0LikeParser.PROCEDURE, 0); }
		public TerminalNode IDENT() { return getToken(Pascal0LikeParser.IDENT, 0); }
		public List<TerminalNode> SEMI() { return getTokens(Pascal0LikeParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(Pascal0LikeParser.SEMI, i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Procedure_declaration_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure_declaration_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterProcedure_declaration_part(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitProcedure_declaration_part(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitProcedure_declaration_part(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Procedure_declaration_partContext procedure_declaration_part() throws RecognitionException {
		Procedure_declaration_partContext _localctx = new Procedure_declaration_partContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_procedure_declaration_part);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(PROCEDURE);
			setState(99);
			match(IDENT);
			setState(100);
			match(SEMI);
			setState(101);
			block();
			setState(102);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constant_declaration_partContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(Pascal0LikeParser.CONST, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(Pascal0LikeParser.ASSIGN, 0); }
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(Pascal0LikeParser.SEMI, 0); }
		public Constant_declaration_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant_declaration_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterConstant_declaration_part(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitConstant_declaration_part(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitConstant_declaration_part(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Constant_declaration_partContext constant_declaration_part() throws RecognitionException {
		Constant_declaration_partContext _localctx = new Constant_declaration_partContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constant_declaration_part);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(CONST);
			setState(105);
			type();
			setState(106);
			identifier_list();
			setState(107);
			match(ASSIGN);
			setState(108);
			atom();
			setState(109);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Label_declaration_partContext extends ParserRuleContext {
		public TerminalNode LABEL() { return getToken(Pascal0LikeParser.LABEL, 0); }
		public Label_listContext label_list() {
			return getRuleContext(Label_listContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(Pascal0LikeParser.SEMI, 0); }
		public Label_declaration_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_declaration_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterLabel_declaration_part(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitLabel_declaration_part(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitLabel_declaration_part(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Label_declaration_partContext label_declaration_part() throws RecognitionException {
		Label_declaration_partContext _localctx = new Label_declaration_partContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_label_declaration_part);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(LABEL);
			setState(112);
			label_list();
			setState(113);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declaration_partContext extends ParserRuleContext {
		public Variable_declaration_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration_part; }
	 
		public Variable_declaration_partContext() { }
		public void copyFrom(Variable_declaration_partContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarParallelContext extends Variable_declaration_partContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(Pascal0LikeParser.ASSIGN, 0); }
		public TerminalNode LBRACK() { return getToken(Pascal0LikeParser.LBRACK, 0); }
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(Pascal0LikeParser.RBRACK, 0); }
		public TerminalNode SEMI() { return getToken(Pascal0LikeParser.SEMI, 0); }
		public VarParallelContext(Variable_declaration_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterVarParallel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitVarParallel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitVarParallel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarSimpleUnAsContext extends Variable_declaration_partContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(Pascal0LikeParser.SEMI, 0); }
		public VarSimpleUnAsContext(Variable_declaration_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterVarSimpleUnAs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitVarSimpleUnAs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitVarSimpleUnAs(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarSimpleAsContext extends Variable_declaration_partContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(Pascal0LikeParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(Pascal0LikeParser.SEMI, 0); }
		public VarSimpleAsContext(Variable_declaration_partContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).enterVarSimpleAs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pascal0LikeListener ) ((Pascal0LikeListener)listener).exitVarSimpleAs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Pascal0LikeVisitor ) return ((Pascal0LikeVisitor<? extends T>)visitor).visitVarSimpleAs(this);
			else return visitor.visitChildren(this);
		}
	}
